; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_finish_wait.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ext2/src/extr_linux.c_finish_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.__wait_queue = type { i32 }

@TASK_RUNNING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finish_wait(%struct.TYPE_3__* %0, %struct.__wait_queue** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca %struct.__wait_queue**, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.__wait_queue*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store %struct.__wait_queue** %1, %struct.__wait_queue*** %4, align 8
  %7 = load %struct.__wait_queue**, %struct.__wait_queue*** %4, align 8
  %8 = load %struct.__wait_queue*, %struct.__wait_queue** %7, align 8
  store %struct.__wait_queue* %8, %struct.__wait_queue** %6, align 8
  %9 = load i32, i32* @TASK_RUNNING, align 4
  %10 = call i32 @__set_current_state(i32 %9)
  %11 = load %struct.__wait_queue*, %struct.__wait_queue** %6, align 8
  %12 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %11, i32 0, i32 0
  %13 = call i32 @list_empty_careful(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %27, label %15

15:                                               ; preds = %2
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %5, align 8
  %19 = call i32 @spin_lock_irqsave(i32* %17, i64 %18)
  %20 = load %struct.__wait_queue*, %struct.__wait_queue** %6, align 8
  %21 = getelementptr inbounds %struct.__wait_queue, %struct.__wait_queue* %20, i32 0, i32 0
  %22 = call i32 @list_del_init(i32* %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @spin_unlock_irqrestore(i32* %24, i64 %25)
  br label %27

27:                                               ; preds = %15, %2
  %28 = load %struct.__wait_queue*, %struct.__wait_queue** %6, align 8
  %29 = call i32 @wait_queue_destroy(%struct.__wait_queue* %28)
  ret void
}

declare dso_local i32 @__set_current_state(i32) #1

declare dso_local i32 @list_empty_careful(i32*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @list_del_init(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @wait_queue_destroy(%struct.__wait_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
